2013-01-08  Sam Weinig  <sam@webkit.org>

        This should be camel case. Must remove to fix.

        * OWNERS: Removed.

2013-01-08  Alexey Proskuryakov  <ap@apple.com>

        <rdar://problem/12944813> Network process temporary and cache directories are not set correctly

        Reviewed by Sam Weinig.

        Set DIRHELPER_USER_DIR_SUFFIX, like we do for WebProcess. Also while in this function,
        enabled sandbox-style file quarantine.

        * NetworkProcess/mac/NetworkProcessMac.mm:
        (WebKit::NetworkProcess::initializeSandbox):

2013-01-08  Anders Carlsson  <andersca@apple.com>

        Use correct capitalization in service name
        https://bugs.webkit.org/show_bug.cgi?id=106368

        Reviewed by Andreas Kling.

        * WebProcess/com.apple.WebProcess.sb.in:

2013-01-08  Anders Carlsson  <andersca@apple.com>

        Tweak sandbox profile
        https://bugs.webkit.org/show_bug.cgi?id=106362
        <rdar://problem/12884745>

        Reviewed by Sam Weinig.

        * WebProcess/com.apple.WebProcess.sb.in:
        Allow access to com.apple.CoreServices.launchservicesd.

2013-01-08  Sam Weinig  <sam@webkit.org>

        Add OWNERS file.

        * OWNERS: Added.

2013-01-08  Mark Lam  <mark.lam@apple.com>

        Removed the need for the ProposedDatabase mechanism.
        https://bugs.webkit.org/show_bug.cgi?id=106292.

        Reviewed by Sam Weinig.

        * WebProcess/WebCoreSupport/WebChromeClient.cpp:
        (WebKit::WebChromeClient::exceededDatabaseQuota):
        * WebProcess/WebCoreSupport/WebChromeClient.h:
        (WebChromeClient):

2013-01-08  Sam Weinig  <sam@webkit.org>

        Remove dead Connection members in ChildProcess subclasses (and their users)
        https://bugs.webkit.org/show_bug.cgi?id=106347
        <rdar://problem/12973955>

        Reviewed by Alexey Proskuryakov.

        This also fixes a crash when entering fullscreen with a plug-in.

        * PluginProcess/PluginProcess.h: