@@ -1,3 +1,13 @@
+2013-01-08  Anders Carlsson  <andersca@apple.com>
+
+        Silence a sandbox violation
+        https://bugs.webkit.org/show_bug.cgi?id=106386
+        <rdar://problem/12976435>
+
+        Reviewed by Andreas Kling.
+
+        * WebProcess/com.apple.WebProcess.sb.in:
+
 2013-01-08  Sam Weinig  <sam@webkit.org>
 
         This should be camel case. Must remove to fix.
